# rustcord

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  setup.py
examples/: autocomplete_permissions_bot.py  basic_bot.py  complete_bot.py  component_bot.py  embed_bot.py  placeholder  sharded_bot.py  slash_command_bot.py  voice_bot.py
rustcord/: __init__.py  _rust.py  client.py  embeds.py  errors.py  gateway.py  models.py  placeholder
rustcord.egg-info/: placeholder
src/: placeholder
src/discord/: api.rs  errors.rs  gateway.rs  gateway.rs.bak  mod.rs  models.rs  placeholder  util.rs
