[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "rustcord"
version = "0.2.0"
description = "A high-performance Discord API library with Rust core"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ghulq", email = "ghulq@mcbehub.de" }]
keywords = ["discord", "bot", "api", "rust", "async", "websocket", "gateway"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Operating System :: OS Independent"
]
dependencies = [
  "aiohttp>=3.11.0",
  "websockets>=10.0"
]

[project.urls]
Homepage = "https://github.com/ghulq/rustcord"
"Bug Tracker" = "https://github.com/ghulq/rustcord/issues"
Documentation = "https://github.com/ghulq/rustcord#readme"
Source = "https://github.com/ghulq/rustcord"

[tool.maturin]
python-source = "rustcord"
module-name = "rustcord._rust"